canaryv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginxv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      volumes:
      - name: work-dir
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: work-dir
          mountPath: "/usr/share/nginx/html"
