two2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginxm
  name: nginxm
spec:
  containers:
  - image: nginx
    name: nginxm
    volumeMounts:
    - name: workdir
      mountPath: "/usr/share/nginx/html"
    ports:
    - containerPort: 80
  volumes:
  - name: workdir
    emptyDir: {}
