twocontainers.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb
  name: bb
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - "echo Hello; sleep 3600"
    image: busybox
    name: bb1

  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 3600
    image: busybox
    name: bb2
